third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/bug_10991b.exp
module 0x42::Test {
    fun foo(g: |(u64, u64)|(u64), x: u64, _y: u64): u64 {
        g(x, _y)
    }
    public fun test() {
        if (!(foo(|(arg0,arg1)| __lambda__1__test(arg0, arg1), 10, 100) == 100)) abort 0;
    }
    fun __lambda__1__test(param$0: u64, y: u64): u64 {
        y
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ bug_10991b.move:6:20
  │
6 │         if (!(foo(|(arg0,arg1)| __lambda__1__test(arg0, arg1), 10, 100) == 100)) abort 0;
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected a variable or struct or variant name
